# Vessel-Eye

./: .gitignore  Presentation.html  README.md  anatomy.py  av_backend.py  av_classifier.py  benchmark_comparison.py  constant.py  deep_backend.py  draw.py  evaluate_testset.py  feature_extract.py  input_data.py  main.py  main_for_check.py  model_metadata.py  od_backend.py  presentation.md  pyproject.toml  quality_assessment.py  requirements.txt  riched_image.py  riched_image_check.py  run_eval_classical.py  slides_from_slide22.pptx  training_model.py
claude-rec/: session_2026-04-14_improvements.md
docs/: Presentation.html  Value-Criteria.md  pipeline-evaluation.md  review.md
docs/claude-rec/: index.html  new-session-chat-with-claude.md
models/: stroke_risk_model.pkl
reports/: benchmark_comparison.json  metrics_report.json  test_metrics.json
